--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,16 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "react-datepicker": "^4.8.0",
+    "date-fns": "^2.29.2"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "@types/react-datepicker": "^4.8.0"
   }
 }
