--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-dom": "17.0.2",
     "zod": "^3.22.4",
     "react-datepicker": "^4.8.0",
-    "date-fns": "^2.29.2"
+    "date-fns": "^2.29.2",
+    "date-fns-tz": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
