First attempt at the admin dashboard

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -43,3 +43,8 @@ services:
     image: postgres
     env_file:
       - .env.dev
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
