--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,19 +1,23 @@
 #---- Base python ----
-FROM python:3.9-slim-bullseye as base
+FROM python:3.9
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
 # Create app directory
 WORKDIR /src
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt 
 
-# ---- Copy Files/Build ----
-FROM base
-
-WORKDIR /src
-
+# Copy project files
 COPY . /src
 
 RUN chmod -R 777 /src
