--- a/client/package.json
+++ b/client/package.json
@@ -12,23 +12,25 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^0.25.0",
+    "date-fns": "^2.29.2",
+    "date-fns-tz": "^2.0.0",
     "framer-motion": "^6.2.6",
     "next": "12.0.10",
     "react": "17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "zod": "^3.22.4",
-    "react-datepicker": "^4.8.0",
-    "date-fns": "^2.29.2",
-    "date-fns-tz": "^2.0.0"
+    "react-redux": "^7.2.9",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/react-datepicker": "^4.8.0",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5",
-    "@types/react-datepicker": "^4.8.0"
+    "typescript": "4.5.5"
   }
 }
