SUMMARY: Completed significant improvements to the admin dashboard UI and overall system architecture.
KEY CHANGES:

1. Admin Dashboard UI
- Enhanced tab system for Service Advisor/Technician views
- Improved header with ServiceFLOW branding
- Added user controls and notifications
- Fixed layout and positioning issues

2. Service Management
- Implemented multi-step service request flow
- Added scheduling system with date/time selection
- Enhanced form validation and error handling

3. Technical Infrastructure
- Integrated Chakra UI theming system
- Added Redis caching for performance
- Implemented JWT authentication
- Created role-based access control

4. Data Architecture
- Enhanced customer and vehicle models
- Added service request tracking
- Improved relationship management between entities

5. Development Setup
- Configured Docker environment
- Added API documentation with Swagger
- Enhanced error logging

NEXT STEPS:
- Continue UI polish
- Add more robust error handling
- Enhance real-time updates
- Implement additional admin features

STATUS: On Track
PRIORITY: Medium
BLOCKERS: None

--- a/.env.dev
+++ b/.env.dev
@@ -21,3 +21,8 @@ DEFAULT_PASS=guest
 
 #Production Config
 GUNICORN_WORKERS=5
+
+#Redis Config
+REDIS_PASSWORD=gLMgr@9DAy77UE4
+REDIS_HOST=redis
+REDIS_PORT=6379
