Implemented Redis caching infrastructure and refined dashboard UI components. The admindashboard now has live updating.

--- a/.env.dev
+++ b/.env.dev
@@ -1,9 +1,9 @@
 #PostgreSQL Config
 
 DB_ENGINE=django.db.backends.postgresql
-POSTGRES_DB=db
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
+POSTGRES_DB=serviceflow
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 DB_HOST=db
 DB_PORT=5432
 
@@ -11,11 +11,12 @@ DB_PORT=5432
 
 PYTHONUNBUFFERED=True
 DJANGO_DEBUG=True
+DJANGO_SETTINGS_MODULE=server.settings
 
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@admin.com
 DJANGO_SUPERUSER_PASSWORD=admin
-SECRET_KEY=django-insecure-ncs&&)001*$$7mgs822pvidtwj(pf=jc=g851__q!ysy5bkwzk
+SECRET_KEY=your-secret-key-here
 DEFAULT_USER=guest
 DEFAULT_PASS=guest
 
@@ -26,3 +27,9 @@ GUNICORN_WORKERS=5
 REDIS_PASSWORD=gLMgr@9DAy77UE4
 REDIS_HOST=redis
 REDIS_PORT=6379
+
+# CORS Settings
+CORS_ALLOWED_ORIGINS=http://localhost:3000
+
+# WebSocket Settings
+NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws/appointments/
