--- a/.env.dev
+++ b/.env.dev
@@ -23,13 +23,8 @@ DEFAULT_PASS=guest
 #Production Config
 GUNICORN_WORKERS=5
 
-#Redis Config
-REDIS_PASSWORD=gLMgr@9DAy77UE4
-REDIS_HOST=redis
-REDIS_PORT=6379
-
 # CORS Settings
 CORS_ALLOWED_ORIGINS=http://localhost:3000
 
-# WebSocket Settings
-NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws/appointments/
+# Socket.IO Settings
+NEXT_PUBLIC_API_URL=http://localhost:8000
