--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.3",
     "react-icons": "^4.3.1",
+    "socket.io-client": "^4.7.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/react": "17.0.39",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "17.0.11",
+    "@types/socket.io-client": "^3.0.0",
     "typescript": "4.5.5"
   }
 }
