--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,9 +9,8 @@ djoser==2.0.5
 django-jazzmin==2.4.8
 gunicorn==20.1.0
 whitenoise==5.3.0
+python-socketio>=5.8.0
 django-redis==5.2.0
 redis==4.5.4
 hiredis==2.2.3
-channels==3.0.4
-channels-redis==3.4.1
-daphne==3.0.2
+uvicorn==0.24.0
