--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -33,10 +33,10 @@ services:
       - "3000:3000"
     volumes:
       - ./client:/src
+      - /src/node_modules
     env_file:
       - .env.dev
-    command: >
-      sh -c "npm install -g npm@latest && npm install && npm run dev"
+    command: npm run dev
     depends_on:
       - server
       - db
