--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,10 +18,12 @@ services:
     environment:
       - DJANGO_SETTINGS_MODULE=server.settings
       - PYTHONPATH=/src
+      - REDIS_HOST=redis
     command: >
-      sh -c "sh migrations.sh && uvicorn server.asgi:application --host 0.0.0.0 --port 8000"
+      sh -c "sh migrations.sh && uvicorn server.asgi:application --host 0.0.0.0 --port 8000 --reload"
     depends_on:
       - db
+      - redis
 
   client:
     container_name: client
@@ -48,6 +50,12 @@ services:
       - .env.dev
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  redis:
+    container_name: redis
+    image: redis:latest
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
