--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,11 @@ FROM python:3.9-slim-bullseye as base
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
+# Install build dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
 # Create app directory
 WORKDIR /src
 COPY requirements.txt ./
