--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,14 +3,13 @@ django-cors-headers==3.7.0
 djangorestframework==3.12.4
 drf-yasg==1.20.0
 psycopg2-binary>=2.9.1,<2.9.2
-drf-yasg==1.20.0
 djangorestframework-simplejwt==5.0.0
 djoser==2.0.5
 django-jazzmin==2.4.8
 gunicorn==20.1.0
 whitenoise==5.3.0
-python-socketio>=5.8.0
-django-redis==5.2.0
-redis==4.5.4
-hiredis==2.2.3
+channels==4.0.0
 uvicorn==0.24.0
+uvicorn[standard]
+websockets
+channels_redis==4.1.0
