feat(client): refactor Docker setup, enhance Next.js configuration, and improve component functionality
- Updated docker-compose.dev.yml to streamline volume mounts and added environment variables for development.
- Refactored Dockerfile to use Node 18.19-alpine, ensuring compatibility with Next.js and improving build efficiency.
- Enhanced next.config.js with API rewrites for Django backend communication and improved TypeScript settings.
- Updated LoginForm and VehicleServiceForm components for better form handling and validation.
- Improved Workflow components for better drag-and-drop functionality and user experience.
- Cleaned up package.json and package-lock.json to remove deprecated dependencies and ensure compatibility with updated libraries.

These changes aim to enhance the development workflow, improve application stability, and provide a better user experience across the client application.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -27,17 +27,25 @@ services:
 
   client:
     container_name: client
-    build: ./client
+    build:
+      context: ./client
+    platform: linux/x86_64
     stdin_open: true
     tty: true
-    working_dir: /src
+    working_dir: /app
     ports:
       - "3000:3000"
     volumes:
-      - ./client:/src
-      - /src/node_modules
+      - ./client:/app
+      - /app/node_modules
+      - /app/.next
     env_file:
       - .env.dev
+    environment:
+      - NODE_ENV=development
+      - NEXT_TELEMETRY_DISABLED=1
+      - WATCHPACK_POLLING=true
+      - SHELL=/bin/zsh
     command: npm run dev
     depends_on:
       - server
