--- a/client/package.json
+++ b/client/package.json
@@ -1,38 +1,30 @@
 {
   "name": "client",
+  "version": "0.1.0",
   "private": true,
+  "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/system": "^2.6.2",
+    "@dnd-kit/core": "6.0.8",
+    "@dnd-kit/sortable": "7.0.2",
+    "@dnd-kit/utilities": "3.2.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@types/node": "20.10.6",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "axios": "0.27.2",
+    "framer-motion": "^10.17.9",
+    "next": "14.0.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.3.3"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },
-  "dependencies": {
-    "@chakra-ui/icons": "^1.1.5",
-    "@chakra-ui/react": "^1.8.3",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@hookform/resolvers": "^2.8.8",
-    "axios": "^0.25.0",
-    "date-fns": "^2.29.2",
-    "date-fns-tz": "^2.0.0",
-    "framer-motion": "^6.2.6",
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-datepicker": "^4.8.0",
-    "react-dom": "17.0.2",
-    "react-hook-form": "^7.25.3",
-    "react-icons": "^4.3.1",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.17",
-    "@types/react": "17.0.39",
-    "@types/react-datepicker": "^4.8.0",
-    "@types/react-dom": "17.0.11",
-    "typescript": "4.5.5"
   }
 }
