feat(tests): establish comprehensive testing infrastructure and enhance API connectivity validation
- Set up Jest configuration and testing framework for the client application.
- Implemented API connectivity tests to validate authentication flow, CORS configuration, and error handling.
- Created unit and integration test scripts to ensure robust testing of components and services.
- Enhanced WebSocket connection management and error handling in the useWebSocket hook.
- Updated Docker configuration for development to streamline testing processes.
- Refactored components to improve testability and maintainability.

These changes aim to improve the reliability of the application through rigorous testing and validation, ensuring a smoother development workflow and better user experience.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,6 +29,7 @@ services:
     container_name: client
     build:
       context: ./client
+      target: development
     platform: linux/x86_64
     stdin_open: true
     tty: true
@@ -36,7 +37,20 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./client:/app
+      - ./client/components:/app/components
+      - ./client/lib:/app/lib
+      - ./client/pages:/app/pages
+      - ./client/styles:/app/styles
+      - ./client/types:/app/types
+      - ./client/hooks:/app/hooks
+      - ./client/scripts:/app/scripts
+      - ./client/public:/app/public
+      - ./client/themes:/app/themes
+      - ./client/contexts:/app/contexts
+      - ./client/utils:/app/utils
+      - ./client/tests:/app/tests
+      - ./client/jest.config.js:/app/jest.config.js
+      - ./client/jest.setup.js:/app/jest.setup.js
       - /app/node_modules
       - /app/.next
     env_file:
