--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
+    "@jest/globals": "^29.7.0",
+    "@types/node-fetch": "^2.6.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.1",
